--- a/ansible/playbooks/keepalived/inventory.yml
+++ b/ansible/playbooks/keepalived/inventory.yml
@@ -17,7 +17,7 @@ all:
         ansible_become_password: "{{ lookup('env', 'BECOME_PASSWORD') }}"
     dns-servers:
       hosts:
-        trah-dns-01:
+        trahdns1:
           ansible_host: 10.0.0.15
           ansible_user: devops
         trahdns2:
