Added keepalive playbook specific to k3s with control planes have their own vrrp instance. seperate keepalived into different subdirectories per app

--- a/ansible/playbooks/dns/vars/vars.yaml
+++ b/ansible/playbooks/dns/vars/vars.yaml
@@ -43,16 +43,19 @@ dns_records:
 - {host: trahan-nas, type: A, zone: trahan.dev, record_value: "10.0.0.8"}
 - {host: trahdb1, type: A, zone: trahan.dev, record_value: "10.0.1.209"}
 - {host: trahdb2, type: A, zone: trahan.dev, record_value: "10.0.1.208"}
-- {host: trahkube1, type: A, zone: trahan.dev, record_value: "10.0.1.210"}
+- {host: trahkube1, type: A, zone: trahan.dev, record_value: "10.0.0.210"}
 - {host: trahkube2, type: A, zone: trahan.dev, record_value: "10.0.1.249"}
 - {host: trahkube3, type: A, zone: trahan.dev, record_value: "10.0.1.29"}
+- {host: trahkubeapi1, type: A, zone: trahan.dev, record_value: "10.0.0.200"}
+- {host: trahk3worker1, type: A, zone: trahan.dev, record_value: "10.0.0.101"}
 - {host: truenas, type: A, zone: trahan.dev, record_value: "10.0.0.12"}
 - {host: trahdb2, type: PTR, zone: 1.0.10.in-addr.arpa., record_value: '208'}
 - {host: trahdb1, type: PTR, zone: 1.0.10.in-addr.arpa., record_value: '109'}
-- {host: trah-dns-01, type: PTR, zone: 0.0.10.in-addr.arpa., record_value: '14'}
+- {host: trahdns1, type: PTR, zone: 0.0.10.in-addr.arpa., record_value: '15'}
 - {host: trahdns2, type: PTR, zone: 0.0.10.in-addr.arpa., record_value: '14'}
 - {host: trahdns3, type: PTR, zone: 0.0.10.in-addr.arpa., record_value: '17'}
 - {host: trah-dns, type: PTR, zone: 0.0.10.in-addr.arpa., record_value: '19'}
+- {host: asus, type: PTR, zone: 0.0.10.in-addr.arpa., record_value: '254'}
 - {host: trahkube1, type: PTR, zone: 0.0.10.in-addr.arpa., record_value: '210'}
 - {host: trahkube2, type: PTR, zone: 1.0.10.in-addr.arpa., record_value: '249'}
 - {host: trahkube3, type: PTR, zone: 1.0.10.in-addr.arpa., record_value: '29'}
