--- a/ansible/playbooks/initial_dev_config/inventory.yml
+++ b/ansible/playbooks/initial_dev_config/inventory.yml
@@ -2,6 +2,12 @@ all:
   children:
     k3s-workers:
       hosts:
+        trahkubeapi1:
+          ansible_host: 10.0.0.200
+          ansible_user: jtrahan
+        trahk3worker1:
+          ansible_host: 10.0.0.101
+          ansible_user: jtrahan
         trahkube1:
           ansible_host: trahkube1.trahan.dev
           ansible_user: jtrahan
