--- a/ansible/playbooks/dns/vars/vars.yaml
+++ b/ansible/playbooks/dns/vars/vars.yaml
@@ -1,5 +1,5 @@
 domain: trahan.dev
-forward_zones: ['trahan.dev']
+forward_zones: ['trahan.dev', 'test.trahan.dev']
 reverse_zones: ['1.0.10.in-addr.arpa', '0.0.10.in-addr.arpa']
 forwarders: ['1.1.1.1', '8.8.8.8', '9.9.9.9']
 acl_allow_transfer: ['10.0.0.14', '10.0.0.15', '10.0.0.17', '10.0.0.64', '10.0.1.64', '127.0.0.0/8']
@@ -8,6 +8,11 @@ nameservers:
 - {name: trahdns1, zone: trahan.dev, ip_address: '10.0.0.15', last: 15, ns_name: ns1}
 - {name: trahdns2, zone: trahan.dev, ip_address: '10.0.0.14', last: 14, ns_name: ns2}
 - {name: trahdns3, zone: trahan.dev, ip_address: '10.0.0.17', last: 17, ns_name: ns3}
+
+nameservers_test_zone:
+- {name: trahdns1, zone: test.trahan.dev, ip_address: '10.0.0.15', last: 15, ns_name: ns1}
+- {name: trahdns2, zone: test.trahan.dev, ip_address: '10.0.0.14', last: 14, ns_name: ns2}
+- {name: trahdns3, zone: test.trahan.dev, ip_address: '10.0.0.17', last: 17, ns_name: ns3}
 
 dns_records:
 - {host: vm1, type: A, zone: trahan.dev, record_value: '10.0.1.64'}
@@ -59,3 +64,10 @@ dns_records:
 - {host: trahkube1, type: PTR, zone: 0.0.10.in-addr.arpa., record_value: '210'}
 - {host: trahkube2, type: PTR, zone: 1.0.10.in-addr.arpa., record_value: '249'}
 - {host: trahkube3, type: PTR, zone: 1.0.10.in-addr.arpa., record_value: '29'}
+
+sub_zone_records:
+- {host: api, type: A, zone: test.trahan.dev, record_value: "10.0.1.64"}
+- {host: calc, type: A, zone: test.trahan.dev, record_value: "10.0.1.64",}
+
+
+
