--- a/kubernetes/traefik_ingress/traefik-dashboard.yaml
+++ b/kubernetes/traefik_ingress/traefik-dashboard.yaml
@@ -9,6 +9,7 @@ spec:
       - "--api"
       - "--api.dashboard=true"
       - "--api.insecure=true"
+      - "--providers.kubernetescrd.allowExternalNameServices=true"
     ports:
       traefik:
         expose: true
