--- a/kubernetes/traefik_ingress/proxmox_external.yaml
+++ b/kubernetes/traefik_ingress/proxmox_external.yaml
@@ -5,9 +5,10 @@ metadata:
   namespace: default
 spec:
   type: ExternalName
-  externalName: 10.0.0.9
+  externalName: proxmox1.trahan.dev
   ports:
-  - port: 8006
+  - name: https
+    port: 8006
     targetPort: 8006
 ---
 apiVersion: v1
@@ -17,7 +18,21 @@ metadata:
   namespace: default
 spec:
   type: ExternalName
-  externalName: 10.0.0.50
+  externalName: proxmox2.trahan.dev
   ports:
-  - port: 8006
+  - name: https
+    port: 8006
+    targetPort: 8006
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: proxmox3-service
+  namespace: default
+spec:
+  type: ExternalName
+  externalName: proxmox3.trahan.dev
+  ports:
+  - name: https
+    port: 8006
     targetPort: 8006
