--- a/kubernetes/traefik_ingress/traefik-dashboard.yaml
+++ b/kubernetes/traefik_ingress/traefik-dashboard.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: kube-system
 spec:
   valuesContent: |-
+    deployment:
+      kind: DaemonSet
     additionalArguments:
       - "--api"
       - "--api.dashboard=true"
