--- a/kubernetes/storage/pv-prom.yaml
+++ b/kubernetes/storage/pv-prom.yaml
@@ -9,7 +9,7 @@ spec:
   accessModes:
   - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: local-storage
+  storageClassName: longhorn
   local:
     path: /prometheus-data
   nodeAffinity:
