--- a/kubernetes/storage/pvc-prom.yaml
+++ b/kubernetes/storage/pvc-prom.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: prometheus-pvc
+  name: prom-pvc
   namespace: default
 spec:
   accessModes:
@@ -9,4 +9,4 @@ spec:
   storageClassName: longhorn
   resources:
     requests:
-      storage: 4Gi
+      storage: 5Gi
