Add neovim build to dev config playbook

--- a/ansible/playbooks/dns/main.yml
+++ b/ansible/playbooks/dns/main.yml
@@ -1,5 +1,6 @@
 - name: Install Bind
-  hosts: "{{ ansible_limit | default(omit) }}"
+  hosts: dns-servers
+  #hosts: "{{ ansible_limit | default(omit) }}"
   become: yes
   gather_facts: yes
 
