--- a/ansible/playbooks/initial_dev_config/inventory.yml
+++ b/ansible/playbooks/initial_dev_config/inventory.yml
@@ -17,6 +17,10 @@ all:
         trahkube3:
           ansible_host: trahkube3.trahan.dev
           ansible_user: jtrahan
+        trahkube4:
+          ansible_host: 10.0.0.201
+          ansible_user: jtrahan
+
       vars:
         ansible_become: true
         ansible_become_method: sudo
@@ -36,10 +40,43 @@ all:
         ansible_become: true
         ansible_become_method: sudo
         ansible_become_password: "{{ lookup('env', 'ANSIBLE_DEVOPS') }}"
+    db-servers:
+      hosts:
+        trahdb1:
+          ansible_host: trahdb1.trahan.dev
+          ansible_user: devops
+        trahdb2:
+          ansible_host: trahdb2.trahan.dev
+          ansible_user: devops
+        trahdb3:
+          ansible_host: 10.0.0.22
+          ansible_user: jtrahan
+      vars:
+        ansible_become: true
+        ansible_become_method: sudo
+        ansible_become_password: "{{ lookup('env', 'ANSIBLE_DEVOPS') }}"
     tailscale-routers:
       hosts:
         trah-rt-03:
           ansible_host: 10.0.0.85
+          ansible_user: jtrahan
+      vars:
+        ansible_become: true
+        ansible_become_method: sudo
+        ansible_become_password: "{{ lookup('env', 'ANSIBLE_JT') }}"
+    nfs-servers:
+      hosts:
+        trahnfs1:
+          ansible_host: 10.0.0.8
+          ansible_user: jtrahan
+      vars:
+        ansible_become: true
+        ansible_become_method: sudo
+        ansible_become_password: "{{ lookup('env', 'ANSIBLE_JT') }}"
+    plex-servers:
+      hosts:
+        trahplex1:
+          ansible_host: 10.0.0.99
           ansible_user: jtrahan
       vars:
         ansible_become: true
