--- a/ansible/playbooks/postgres/pg_replica.yml
+++ b/ansible/playbooks/postgres/pg_replica.yml
@@ -27,7 +27,8 @@
 
     - name: Add entries to pg_hba
       community.postgresql.postgresql_pg_hba:
-        dest: "/etc/postgresql/14/main/pg_hba.conf"
+        create: true
+        dest: "/etc/postgresql/{{ pg_version }}/main/pg_hba.conf"
         address: "{{ item.address | default(omit) }}"
         contype: "{{ item.contype }}"
         databases: "{{ item.databases }}"
@@ -48,14 +49,14 @@
     - name: Remove all files and directories inside main, but keep main directory
       ansible.builtin.command:
         cmd: |
-          find /var/lib/postgresql/14/main/ -mindepth 1 -delete
+          find /var/lib/postgresql/{{ pg_version }}/main/ -mindepth 1 -delete
       become: true
       become_user: postgres
 
 
     - name: Init streaming replica
       ansible.builtin.command:
-        cmd: pg_basebackup -h "{{ item.hostname }}" -D /var/lib/postgresql/14/main -U replicator -v -R -X stream
+        cmd: pg_basebackup -h "{{ item.hostname }}" -D /var/lib/postgresql/{{ pg_version }}/main -U replicator -v -R -X stream
       become: true
       become_user: postgres
       notify:
