--- a/kubernetes/services/calc-compound.yaml
+++ b/kubernetes/services/calc-compound.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: calc-frontend
-        image: git.trahan.dev/jtrahan/calc-react:v1.0.1
+        image: docker.io/jtrahan88/calc-react:v1.0.1
         ports:
         - containerPort: 80
         env:
@@ -67,7 +67,7 @@ spec:
     spec:
       containers:
       - name: calc-go-backend
-        image: git.trahan.dev/jtrahan/go-backend:dev
+        image: docker.io/jtrahan88/go-backend:dev
         ports:
         - containerPort: 8283
         resources:
