Fix neovim build dir reference

--- a/ansible/playbooks/initial_dev_config/install_packages_and_add_users.yml
+++ b/ansible/playbooks/initial_dev_config/install_packages_and_add_users.yml
@@ -96,7 +96,6 @@
         clone: yes
       become: yes
       become_user: jtrahan
-      register: nvim_clone
 
     - name: Make build for Neovim
       ansible.builtin.command:
@@ -106,10 +105,10 @@
       become: yes
       become_user: jtrahan
 
-    - name: Make build for Neovim
+    - name: Make Install Neovim
       ansible.builtin.command:
         cmd: make Install
-        chdir: "{{ nvim_clone.dest }}"
+        chdir: '{{ nvim_repo_dir.path }}'
         creates: '/usr/local/bin/nvim'
       become: yes
 
