Fix capitalization typo

--- a/ansible/playbooks/initial_dev_config/install_packages_and_add_users.yml
+++ b/ansible/playbooks/initial_dev_config/install_packages_and_add_users.yml
@@ -107,7 +107,7 @@
 
     - name: Make Install Neovim
       ansible.builtin.command:
-        cmd: make Install
+        cmd: make install
         chdir: '{{ nvim_repo_dir.path }}'
         creates: '/usr/local/bin/nvim'
       become: yes
