--- a/ansible/playbooks/postgres/pg_replica.yml
+++ b/ansible/playbooks/postgres/pg_replica.yml
@@ -1,4 +1,5 @@
-- hosts: replica-db
+- name: install Postgres and setup standby replica
+  hosts: "{{ ansible_limit | default(omit) }}"
   vars_files:
     - vault.yml
     - vars.yml
