--- a/ansible/playbooks/postgres/pg_primary.yml
+++ b/ansible/playbooks/postgres/pg_primary.yml
@@ -176,14 +176,12 @@
 
     - name: Create directory for pg backups
       ansible.builtin.file:
-        path: "{{ item.local_archive_dir }}"
+        path: "{{ local_7zip_dir }}"
         state: directory
         mode: "0775"
         owner: postgres
         group: pgbackup
       become: true
-      with_items: "{{ b2_app_key_and_secret }}"
-      register: local_7z_dir
 
     - name: Add users to pgbackup
       ansible.builtin.user:
@@ -212,8 +210,8 @@
 
     - name: Download backup from b2 for go-infra
       ansible.builtin.command:
-        cmd: /pgdumps/venv/bin/b2 sync "{{ item.archive_dir_b2 }}" "{{ local_7z_dir.path }}"
-        creates: "{{ local_7z_dir.path }}/k3sdb.7z"
+        cmd: /pgdumps/venv/bin/b2 sync "{{ item.archive_dir_b2 }}" "{{ local_7zip_dir }}"
+        creates: "{{ local_7zip_dir }}/k3sdb.7z"
       with_items: "{{ b2_app_key_and_secret }}"
       become: yes
       become_user: postgres
@@ -221,14 +219,14 @@
     - name: Unarchive a file with extra options
       ansible.builtin.command:
         cmd: 7z x {{ item.goinfra_file }} "-p{{ item.pw }}"
-        chdir: "{{ local_7z_dir.path }}"
+        chdir: "{{ local_7zip_dir }}"
         creates: /pgdumps/go-infra.sql
       with_items: "{{ seven_z_pw }}"
 
     - name: Unarchive a file with extra options
       ansible.builtin.command:
         cmd: 7z x {{ item.k3s_file }} "-p{{ item.pw }}"
-        chdir: "{{ local_7z_dir.path }}"
+        chdir: "{{ local_7zip_dir }}"
         creates: /pgdumps/k3s.sql
       with_items: "{{ seven_z_pw }}"
 
@@ -236,7 +234,7 @@
       community.postgresql.postgresql_db:
         name: "{{ item.db_name }}"
         state: restore
-        target: "{{ local_7z_dir.path }}/{{ item.db_name }}.sql"
+        target: "{{ local_7zip_dir }}/{{ item.db_name }}.sql"
         encoding: "UTF-8"
       become: true
       become_user: postgres
@@ -246,7 +244,7 @@
       community.postgresql.postgresql_db:
         name: "{{ item.k3s_db_name }}"
         state: restore
-        target: "{{ local_7z_dir.path }}/{{ item.k3s_db_name }}.sql"
+        target: "{{ local_7zip_dir }}/{{ item.k3s_db_name }}.sql"
         encoding: "UTF-8"
       become: true
       become_user: postgres
