--- a/ansible/playbooks/postgres/pg_replica.yml
+++ b/ansible/playbooks/postgres/pg_replica.yml
@@ -36,7 +36,6 @@
         method: "{{ item.method }}"
         users: "{{ item.users }}"
       become: true
-      become_user: postgres
       with_items: "{{ postgres_hba_standy_entries }}"
       notify:
         - Restart postgresql
@@ -52,14 +51,19 @@
         cmd: |
           find /var/lib/postgresql/{{ pg_version }}/main/ -mindepth 1 -delete
       become: true
-      become_user: postgres
-
 
     - name: Init streaming replica
       ansible.builtin.command:
         cmd: pg_basebackup -h "{{ item.hostname }}" -D /var/lib/postgresql/{{ pg_version }}/main -U replicator -v -R -X stream
       become: true
-      become_user: postgres
+      notify:
+        - Restart postgresql
+      with_items: "{{ primary_pg_server }}"
+    
+    - name: Fix Permissions
+      ansible.builtin.command:
+        cmd: chown -R postgres:postgres /var/lib/postgresql/{{ pg_version }}/main
+      become: true
       notify:
         - Restart postgresql
       with_items: "{{ primary_pg_server }}"
