--- a/kubernetes/ingress-nginx/grafana-nginx-ingress.yaml
+++ b/kubernetes/ingress-nginx/grafana-nginx-ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: grafana-ingress
-  namespace: default
+  namespace: monitoring
 spec:
   ingressClassName: nginx
   tls:
@@ -17,7 +17,7 @@ spec:
             path: "/"
             backend:
               service:
-                name: grafana
+                name: kube-prometheus-stack-grafana
                 port:
                   number: 80
 ---
@@ -25,7 +25,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: prometheus-ingress
-  namespace: default
+  namespace: monitoring
 spec:
   ingressClassName: nginx
   tls:
@@ -40,6 +40,6 @@ spec:
             path: "/"
             backend:
               service:
-                name: prometheus-server
+                name: prometheus-operated
                 port:
-                  number: 80
+                  number: 9090
