--- a/kubernetes/storage/volumes/pv-grafana.yaml
+++ b/kubernetes/storage/volumes/pv-grafana.yaml
@@ -1,10 +1,11 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: grafana-pv
+  name: grafana-kube-pv
+  namespace: monitoring
 spec:
   capacity:
-    storage: 5Gi
+    storage: 10Gi
   volumeMode: Filesystem
   accessModes:
   - ReadWriteOnce
@@ -20,4 +21,8 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - <NODE_GRAFANA_RUNS>
+          - trahkube2
+          - trahkube3
+          - trahkube4
+          - trahk3worker1
+          - trahkubeapi1
