--- a/kubernetes/storage/volumes/pv-prom.yaml
+++ b/kubernetes/storage/volumes/pv-prom.yaml
@@ -1,10 +1,11 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: prometheus-pv
+  name: kube-prometheus-stack-pv
+  namespace: monitoring
 spec:
   capacity:
-    storage: 5Gi
+    storage: 10Gi
   volumeMode: Filesystem
   accessModes:
   - ReadWriteOnce
@@ -19,4 +20,8 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - <NODE_PROMETHEUS_RUNS>
+          - trahkube2
+          - trahkube3
+          - trahkube4
+          - trahk3worker1
+          - trahkubeapi1
