--- a/kubernetes/storage/volumes/pvc-prom.yaml
+++ b/kubernetes/storage/volumes/pvc-prom.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: prom-pvc
-  namespace: default
+  name: kube-prometheus-stack-pvc
+  namespace: monitoring
 spec:
   accessModes:
   - ReadWriteOnce
   storageClassName: longhorn
   resources:
     requests:
-      storage: 5Gi
+      storage: 10Gi
+  volumeName: kube-prometheus-stack-pv
